# pkg/api/controllers/log.go
@@ -12,9 +12,11 @@ type LogController struct {
 }
 
 // @Summary 登录日志信息
+// @Tags Log
+// @Security ApiKeyAuth
 // @Produce  json
 // @Success 200 {string} json "{"code":200,"data":{"id":1,"name":"test"}}"
-// @Router /v1/api/log/login/{logId} [get]
+// @Router /log/login/{logId} [get]
 func (LogController) LoginLogDetail(c *gin.Context) {
 	logId := int(c.Value("id").(float64))
 	data := logService.LoginLogDetail(dto.GeneralGetDto{Id: logId})
@@ -23,26 +25,28 @@ func (LogController) LoginLogDetail(c *gin.Context) {
 	})
 }
 
-
 // @Summary 登录日志列表
+// @Tags Log
+// @Security ApiKeyAuth
 // @Produce  json
 // @Success 200 {string} json "{"code":200,"data":{"id":1,"name":"test"}}"
-// @Router /v1/api/log/login [get]
+// @Router /log/login [get]
 func (LogController) LoginLogLists(c *gin.Context) {
 	var listDto dto.GeneralListDto
 	_ = dto.Bind(c, &listDto)
 	data, total := logService.LoginLogLists(listDto)
 	resp(c, map[string]interface{}{
-		"total": total,
+		"total":  total,
 		"result": data,
 	})
 }
 
-
 // @Summary 操作日志信息
+// @Tags Log
+// @Security ApiKeyAuth
 // @Produce  json
 // @Success 200 {string} json "{"code":200,"data":{"id":1,"name":"test"}}"
-// @Router /v1/api/log/operation [get]
+// @Router /log/operation [get]
 func (LogController) OperationLogDetail(c *gin.Context) {
 	logId := int(c.Value("id").(float64))
 	data := logService.OperationLogDetail(dto.GeneralGetDto{Id: logId})
@@ -51,18 +55,18 @@ func (LogController) OperationLogDetail(c *gin.Context) {
 	})
 }
 
-
 // @Summary 操作日志列表
+// @Tags Log
+// @Security ApiKeyAuth
 // @Produce  json
 // @Success 200 {string} json "{"code":200,"data":{"id":1,"name":"test"}}"
-// @Router /v1/api/log/operation/{logId} [get]
+// @Router /log/operation/{logId} [get]
 func (LogController) OperationLogLists(c *gin.Context) {
 	var listDto dto.GeneralListDto
 	_ = dto.Bind(c, &listDto)
 	data, total := logService.OperationLogLists(listDto)
 	resp(c, map[string]interface{}{
-		"total": total,
+		"total":  total,
 		"result": data,
 	})
 }
-
